Fixed intersection observer bug on mobile

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -68,13 +68,13 @@ $primary-color: #00c8ff;
 @mixin hiddenRight {
 	opacity: 0;
 	filter: blur(5px);
-	transform: translateX(-100%);
+	transform: translateX(-90%);
 }
 
 @mixin hiddenLeft {
 	opacity: 0;
 	filter: blur(5px);
-	transform: translateX(-100%);
+	transform: translateX(-90%);
 }
 
 @mixin hiddenBottom {
